# termin-inspect

./: CMakeLists.txt  README.md  inspect_kind_extraction_plan.md  mkdocs.yml  pre_migration_cleanup_checklist.md
.github/workflows/: ci.yml
cmake/: termin_inspectConfig.cmake.in
docs/: api.md  architecture.md  cpp-api.md  getting-started.md  gotchas.md  index.md  inheritance.md  inspect-dispatcher.md  integration.md  kind-system.md  python-bridge.md
include/: tc_inspect_cpp.hpp
include/inspect/: tc_inspect.h  tc_inspect_python.hpp  tc_kind.h  tc_kind_cpp.hpp  tc_kind_python.hpp
python/bindings/: inspect_module.cpp
python/termin/inspect/: __init__.py  inspect_field.py  registry.py
src/: tc_inspect.c  tc_inspect_core_instance.cpp  tc_inspect_python.cpp  tc_kind.c  tc_kind_cpp.cpp  tc_kind_python_instance.cpp
tests/: test_cpp_inspect.cpp  test_main.c  test_python_inspect.cpp
